--- a/Lidl_usecase.Rmd
+++ b/Lidl_usecase.Rmd
@@ -12,65 +12,92 @@ library(hrbrthemes)
 library(dplyr)
 library(tidyr)
 library(viridis)
+library(MASS)
 ```
 
 ## Objective
 The aim is to develop a new candy that satisfies the customers' needs. A market research group found this data which is the foundation of further exploration.
 
 ## The Variables
-There's the name, a bunch of properties each candy has (or has not) and three variables which are represented as percentiles, i.e. relative ranks. Those three percentile variables are the most interesting for now because we have actual ranks which are detailed as opposed to name and binary variables.\
-The variable `winpercent` is the overall win percentage. The data is computed from over 269,000 matchups which is giving someone two options of candy and he or she has to choose, so basically a popularity measure. It's the construct we would like to predict in order to create a new candy which will score high on popularity. To have an overview of the distribution of the current products, see in the following plot that the data is roughly normally distributed and slightly right-skewed.
+Next to the product's name, each product has a range of properties which are either present (1) or not (0) and three variables which are represented as percentiles, i.e. relative ranks. \
+The variable `winpercent` is the overall win percentage. The data is computed from over 269,000 matchups which is giving someone two options of candy and he or she has to choose, so basically a popularity measure. Note that I will use popularity and `winpercent` interchangeably throughout the case study. It's the construct we would like to predict in order to create a new candy which will score high on popularity. To have an overview of the popularity distribution of the current products, see in the following plot that the data is roughly normally distributed and slightly right-skewed. The red line represents the mean of 0.503.
 
 ```{r yvisual, echo=F}
 candy <- read.csv("~/Documents/GitHub/candy_usecase/candy-data.csv") # data import
-candy$winpercent <- candy$winpercent/100 # adjust scale to other percentile variables
+# adjust and center dependent variable winpercent
+candy$winpercent <- candy$winpercent / 100 # adjust scale to other percentile variables
 candy %>%
-  filter(winpercent<1) %>%
-  ggplot(aes(x=winpercent)) +
+  filter(winpercent < 1) %>%
+  ggplot(aes(x = winpercent)) +
   xlab("Winning percentile") +
   ylab("Density") + 
-  geom_density(fill="#69b3a2", color="#e9ecef", alpha=0.8)
+  theme_ipsum() +
+  geom_density(fill = "#69b3a2", color = "#e9ecef", alpha = 0.8) +
+  geom_vline(aes(xintercept = mean(winpercent)), color = "darkred")
 ```
 
-## Analysis
-```{r explorative, echo=T}
-library(MASS)
-# Ridge regression model
-model.ridge <- lm.ridge(winpercent~., data=candy[,-1], lambda=seq(0,15, by=0.2))
-# Plot GCV against lambda to find best lambda at lowest GCV
-plot_data = data.frame(model.ridge$lambda, model.ridge$GCV)
-ggplot(plot_data, aes(x=model.ridge.lambda, y=model.ridge.GCV)) +
-  xlab("lambda") +
-  ylab("generalized cross-validation (GCV)") +
-  geom_line()
+## Explorative Analysis
+To analyze the data, I have chosen ridge regression. Ridge puts a size constraint on the parameters to be estimated. By penalizing the residual sum of squares, we aim to avoid that highly correlated regressors cancel each other (multicollinearity). For explorative purposes, I did a quick linear regression to have an overview of probably important variables and principal component analysis for exploring how many main factors there are. Though, none of these two techniques would be sufficient to answer the question at hand.
 
-# Find best lambda 
+```{r explorative, echo=T}
+# ridge regression model
+model.ridge <- lm.ridge(winpercent~., data = candy[,-1], lambda = seq(0,15, by = 0.2))
+
+# find best lambda 
 lambda.opt <- model.ridge$lambda[which.min(model.ridge$GCV)]
 
 # model with optimal lambda
-model.opt.ridge <- lm.ridge(winpercent~., data=candy[,-1], 
+model.opt.ridge <- lm.ridge(winpercent~., data = candy[,-1], 
                             lambda = lambda.opt)
-ridge.coef <- coef(model.opt.ridge)
-ridge.coef # coefficients in original scale + intercept
+ridge.coef <- coef(model.opt.ridge) # coefficients in original scale + intercept
 
-pred.ridge <- as.matrix(cbind(rep(1,length(candy[,1])),candy[,-c(1, 13)]))%*%ridge.coef
-plot_data2 <- data.frame(candy$winpercent, pred.ridge)
-ggplot(plot_data2, aes(x=candy.winpercent, y=pred.ridge)) +
-  xlab("Winning percentile") +
-  ylab("Predicted winning percentile") +
-  geom_point() +
-  geom_abline()
-
-# linear regression
-
-model.lin <- lm(winpercent~., data=candy[,-1])
-summary(model.lin)
+# coefficients for scaled x
+round(sort(model.opt.ridge$coef, decreasing = T), digits = 4)
 ```
 
-model.lin <- lm(winpercent ~ ., data=candy[,-1])
+Above are the sorted standardized coefficients of the cross-validated model. Since they are scaled, we can compare each of the coefficients' weights. First of all, the coefficients imply what customers did not like. Hard candy (hard) which is expensive (pricepercent) and comes as a bag/box of many sweets. After that, we have a look at the tastes. Several of the tastes contribute to an increase in popularity. There seems to be no way around chocolate. Look at the plot below and you clearly see the impact of chocolate. \
+
+```{r visual.choco, echo=F}
+candy %>%
+  filter(winpercent < 1) %>%
+  ggplot(aes(x = winpercent)) +
+  xlab("Winning percentile") +
+  ylab("Density") +
+  theme_ipsum() +
+  scale_fill_manual(name = "", values = c("#B8B2B2","#753615"),
+                    labels = c(" no Chocolate", "Chocolate")) +
+  #scale_fill_discrete(name = "Taste", labels = c(" Chocolate", "No chocolate")) + 
+  geom_density(aes(fill = factor(chocolate)), alpha = 0.8)
+```
+
+How should we combine other tastes with chocolate? Chocolate paired with something peanuty/almondy sounds familiar. Is fruity boosting popularity on its own or is there a way to use both chocolate's and fruitiness' weights to create a product with superior popularity? \
+To answer that we have to look in representative cases in the data. There is only one combination of chocolate and fruit taste within the 85 candies in the sample which is rated below average. Hence this appears to be not the way to go. One could still ask why candy seems to have such a strong impact but is actually badly rated. Looking at the bottom ranks, one can easily detect why fruity has such a high weight in the analysis. Most of the fruity candies are only fruity and don't have any other tastes. Even if the fruity candies score lower on average in popularity, a large part of the variation in `winpercent` is explained by the fruity variable. \
+However, 12 candies have chocolate and nuts in it, the two tastes which contribute to popularity a lot. These candies have a mean-`winpercent` of 0.685 which is way above average. That is a promising result we can work with. \
+
+```{r combis, include=F}
+choc_nut <- as.numeric(count(candy[candy$chocolate == 1 
+                                             & candy$peanutyalmondy == 1,]))
+choc_fruit <- as.numeric(count(candy[candy$chocolate == 1 
+                          & candy$fruity == 1,]))
+mean(candy$winpercent[candy$chocolate == 1 & candy$peanutyalmondy == 1])
+```
 
 
 
 
+## Detail Analysis
+Since fruity is out of the race as a taste for the new product and chocolate dominates the popular ranks, let's have a closer look at the top ranks. To do that, we extract a subset of the original data.
+```{r subset, echo=T}
+subset <- candy[order(candy$winpercent, decreasing = T)[1:30],]
+model.sub <- lm(winpercent ~., data = candy[,-1])
+summary(model.sub)
+```
+
+## Potential Bias
+Many of the high-scoring candies are popular in general as for example Snickers, Twix, Kit Kat or Milky Way. Needless to say, those products are prominent for a reason but might be a fair amount of `winpercent` explained purely by the fact that people know the product. To use this effect, the product development should try create a product which reminds the customer of 
+
+## Appendix
+
+Chocolate and Fruity are the factors with the most influence on winpercent. Is it possible to combine those tastes and still have a good product? The next two variables that are important for winpercent are peanutyAlmondy and caramel which go well with chocolate. Let's explore!
 
 Moreover, we could investigate what role the sugar proportion plays in people rating candy high. Maybe there is some strategy/marketing campaign of Lidl to reduce sugar in its products. Releasing new candy with lower sugar proportions could benefit that campaign and hence Lidl's reputation. The point is that profits don't always need to be purely financial.
